# ENCRYPTO_utils

./: CMakeLists.txt
src/: CMakeLists.txt
src/ENCRYPTO_utils/crypto/: crypto.cpp
